# cl-gen-halide-test

./: gen-cl.lisp  gen-poly-grad.lisp  gen.lisp
source/: CMakeLists.txt  main.cpp
